fix(detail-view):fix detail view page alignments and css

--- a/src/app/components/work-item-detail/work-item-detail.component.less
+++ b/src/app/components/work-item-detail/work-item-detail.component.less
@@ -68,7 +68,7 @@
 .wi-detail-title-blk {
   .detail-title {
     position: relative;
-    max-width: ~"calc(e('100% - 30px'))";
+    max-width: ~"calc(e('100% - 25px'))";
     padding-top: 1px;
     padding-bottom: 3px;
     padding-left: 5px;
