--- a/src/app/widgets/inlineinput/inlineinput.component.less
+++ b/src/app/widgets/inlineinput/inlineinput.component.less
@@ -38,7 +38,7 @@
   &:hover {
     .input-field {
       .Border(1px, solid, @color-pf-blue-200);
-      transition: border ease-in-out 0.3s;
+      transition: all ease-in-out 0.3s;
     }
     .edit-icon {
       opacity: 1;
